// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LargeButton Rendering, disabled, primary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#e6e6e6",
      "borderRadius": 4,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, disabled, secondary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#e6e6e6",
      "borderRadius": 4,
      "borderWidth": 2,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#e6e6e6",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, enabled, primary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0066b1",
      "borderRadius": 4,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, enabled, secondary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#0066b1",
      "borderRadius": 4,
      "borderWidth": 2,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#0066b1",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, primary, danger 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ea554b",
      "borderRadius": 4,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, secondary, danger 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#ea554b",
      "borderRadius": 4,
      "borderWidth": 2,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#ea554b",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, secondary, danger, disabled => defaults to primary 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0066b1",
      "borderRadius": 4,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, with icon 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0066b1",
      "borderRadius": 4,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "justifyContent": "center",
          "paddingRight": 8,
        }
      }
    >
      <Icon
        color="#ffffff"
        name="circle-info"
        size={16}
        type="light"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          undefined,
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`LargeButton Rendering, with title style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0066b1",
      "borderRadius": 4,
      "flex": 1,
      "height": 32,
      "justifyContent": "center",
      "margin": 16,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
  testID="touchable-opacity"
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "justifyContent": "center",
          "paddingRight": 8,
        }
      }
    >
      <Icon
        color="#ffffff"
        name="circle-info"
        size={16}
        type="light"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 20,
            "textAlignVertical": "center",
          },
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 24,
          },
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;
